Fix series item wrapping

--- a/src/components/organisms/recording.module.scss
+++ b/src/components/organisms/recording.module.scss
@@ -132,7 +132,7 @@
 		flex-direction: row;
 		flex-wrap: wrap;
 		> * {
-			flex: 1 0 calc(50% - 32px);
+			flex: 0 0 calc(50% - 16px);
 			&:nth-child(odd) {
 				margin-right: 16px;
 			}
